# Robotics-HW-Mobile

./: ReadMe.md
code/5_EKF-SLAM+Mapping/course_agv_slam_task/: CMakeLists.txt  (+1 more)
code/8_面向动态环境的ParticleFilter定位导航/: Entropy.m  w_plot.m
course_agv_control/: CMakeLists.txt  package.xml
course_agv_control/config/: course_agv_control.yaml
course_agv_control/launch/: course_agv_control.launch
course_agv_description/: CMakeLists.txt  package.xml
course_agv_description/launch/: course_agv.rviz  course_agv_rviz.launch
course_agv_description/urdf/: course_agv.gazebo  course_agv.xacro  materials.xacro
course_agv_gazebo/: CMakeLists.txt  package.xml
course_agv_gazebo/config/: map  map.yaml
course_agv_gazebo/launch/: course_agv.rviz  course_agv_world.launch  course_agv_world_rviz.launch
course_agv_gazebo/scripts/: robot_tf.py
course_agv_gazebo/worlds/: course_agv.world
course_agv_nav/: CMakeLists.txt  package.xml
course_agv_nav/launch/: nav.launch  nav.rviz  nav_replan.rviz  replan.launch
course_agv_nav/scripts/: a_star.py  dwa.py  dwa_gsn.py  global_planner.py  local_planner.py
course_agv_nav/srv/: Plan.srv
course_agv_slam_task/: CMakeLists.txt
course_agv_slam_task/launch/: course_agv.rviz  course_agv_ekf.rviz  ekf.launch  extraction.launch  icp.launch  icp_all.launch  icp_lm.launch  mapping.launch  particle_filter.launch  plot_w.launch
course_agv_slam_task/rviz/: one_for_all.rviz
course_agv_slam_task/src/: ekf.cpp  extraction.cpp  icp.cpp  icp_lm.cpp  mapping.cpp  myicp.cpp  particle_filter.cpp  plot_w.py
doc/: ReadMe.md
video/: readme.txt
(+45 files in other folders)
